mini-kube/05-qa-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:  # <--- Make sure "spec" is here, NOT "spec.spec"
      containers:
        - name: login
          image: kalyangali12/login-2501
          ports:
            - containerPort: 80
---
# Service Template with NodePort
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespce: qa
spec:
  type: NodePort
  selector:
    app: login
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
