mini-kube/06-prod-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomm
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecomm
  template:
    metadata:
      labels:
        app: ecomm
    spec: 
      containers:
        - name: ecomm
          image: kalyangali12/ecomm
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ecomm-svc
  namespace: production
spec:
  type: NodePort
  selector:
    app: ecomm
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
