mini-kube/api2-deployment .yaml
apiVersion: v1 
kind: Deployment 
metadata: 
  name: api2-deployment
spec: 
  replicas:
  selector: 
    matchLabels:
      app: api2
  template:
    metadata:
      labels:
        app: api2
    spec:
      containers: 
      - name: api2
        image: kalyangali12/lms-api2
        ports: 
        - containerPort: 3002
---
apiVersion: v1 
kind: Service 
metadata: 
  name: api2-service
spec:
  selector:
    app: api2
  port: 
    - protocol: tcp
      port: 80
      targetPort: 3002
