mini-kube/api3-deployment.yaml
apiVersion: v1 
kind: Deployment 
metadata: 
  name: api3-deployment
spec: 
  replicas:
  selector: 
    matchLabels:
      app: api3
  template:
    metadata:
      labels:
        app: api3
    spec:
      containers: 
      - name: api3
        image: kalyangali12/node-api3
        ports: 
        - containerPort: 3003
---
apiVersion: v1 
kind: Service 
metadata: 
  name: api1-service
spec:
  selector:
    app: api3 
  port: 
    - protocol: tcp
      port: 80
      targetPort: 3003
